[gd_scene load_steps=11 format=2]

[ext_resource path="res://Units/Unit.gd" type="Script" id=1]
[ext_resource path="res://GameBoard/Grid.tres" type="Resource" id=2]
[ext_resource path="res://Units/unit_shadow.svg" type="Texture" id=3]
[ext_resource path="res://Audio/SFX/Norisa6.wav" type="AudioStream" id=4]
[ext_resource path="res://Ortivas/AnimatedTextures/bebe_ortiva_laugh.tres" type="Texture" id=5]
[ext_resource path="res://Ortivas/AnimatedTextures/bebe_ortiva_idle.tres" type="Texture" id=6]
[ext_resource path="res://Assets/color_identifier.png" type="Texture" id=7]
[ext_resource path="res://Assets/bb ortiva/bb ortiva 1 detalle 3.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1.5, 1.5, 1.5, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Unit" type="Path2D"]
curve = null
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
grid = ExtResource( 2 )
skin = ExtResource( 6 )
laugh = ExtResource( 5 )
skin_offset = Vector2( 13, 56 )
starting_scale = Vector2( 0.3, 0.3 )
target_scale = Vector2( 0.5, 0.5 )
tween_duration = 0.7
trasition_type_in = 4
trasition_type_out = 5

[node name="PathFollow2D" type="PathFollow2D" parent="."]
rotate = false
loop = false

[node name="Shadow" type="Sprite" parent="PathFollow2D"]
modulate = Color( 0.101961, 0.109804, 0.0901961, 0.329412 )
position = Vector2( 0, 35 )
z_index = 4
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="PathFollow2D"]
position = Vector2( 13, 56 )
scale = Vector2( 0.24, 0.24 )
z_index = 5
texture = ExtResource( 6 )
offset = Vector2( -3.8147e-06, -185 )

[node name="Sprite2" type="Sprite" parent="PathFollow2D/Sprite"]
position = Vector2( 0, -183 )
scale = Vector2( 1, 1 )
z_index = 5
texture = ExtResource( 8 )

[node name="Color" type="Sprite" parent="PathFollow2D"]
position = Vector2( 0, 70 )
scale = Vector2( 1.03465, 1.03465 )
z_index = 3
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )
anims/selected = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -2 )
stream = ExtResource( 4 )
volume_db = 20.0

[node name="TimerLaugh" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerLaugh" to="." method="_on_TimerLaugh_timeout"]
